# iot-middleware-freertos-samples

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  NOTICE  README.md  malloc_failed.dmp
demo/projects/ST/b-l475e-iot01a/: CMakeLists.txt  main.c
demo/projects/ST/b-l475e-iot01a/port/: sockets_wrapper_stm32l475.c
demos/: CMakeLists.txt
demos/common/: sample_azure_common.h
demos/common/azure_ca_recovery/: azure_ca_recovery_mbedtls_rsa_verify.c  azure_ca_recovery_parse.c  azure_ca_recovery_parse.h  azure_ca_recovery_rsa_verify.h  azure_ca_recovery_storage.h
demos/common/connection/: azure_sample_connection.h
demos/common/hfsm/: az_hfsm.c  az_hfsm.h  az_hfsm_pal_timer.h  az_iot_hfsm.c  az_iot_hfsm.h  az_iot_hfsm_pal_freertos.c  az_iot_hfsm_pal_freertos_sync.c  az_iot_hfsm_sync_adapter.c  az_iot_hfsm_sync_adapter.h
demos/common/hfsm/doc/: az_iot_hfsm.puml  az_iot_hfsm_sync_adapter.puml  iot_hfsm.puml  iot_hfsm_no_dps.puml  iot_pal_sync_hfsm.puml
demos/common/tests/: azure_sample_adu_jws_mbedtls_int_test.c  jws_using_mbedtls_ut.c  sample_adu_jws_mbedtls_int_test.c  sample_adu_jws_mbedtls_ut.c
demos/common/transport/: sockets_wrapper.h  sockets_wrapper_freertos_tcpip.c  sockets_wrapper_lwip.c  transport_abstraction.h  transport_socket.c  transport_socket.h  transport_tls_socket.h  transport_tls_socket_using_mbedtls.c
demos/common/utilities/: azure_ca_recovery_mbedtls_rsa_verify.c  azure_ca_recovery_parse.c  azure_ca_recovery_parse.h  azure_ca_recovery_rsa_verify.c  azure_ca_recovery_rsa_verify.h  azure_sample_adu_jws_mbedtls.c  azure_sample_ca_recovery.c  azure_sample_ca_recovery.h  azure_sample_crypto_mbedtls.c  azure_sample_rsa_verify.c  azure_trust_bundle_storage.h  crypto.h  crypto_using_mbedtls.c  crypto_using_mbedtls_pkcs11.c  demo_key_provisioning.h  jws.h  jws_using_mbedtls.c  mbedtls_freertos_port.c  sample_adu_jws.h  sample_adu_jws_mbedtls.c
demos/projects/ESPRESSIF/adu/: README.md  partitions_ota.csv  sdkconfig.defaults
demos/projects/ESPRESSIF/adu/config/: azure_iot_config.h  core_http_config.h  demo_config.h
demos/projects/ESPRESSIF/adu/main/: CMakeLists.txt  azure_iot_freertos_esp32_main.c  azure_iot_freertos_esp32_pnp_model.c  azure_iot_freertos_esp32_pnp_model.h
demos/projects/ESPRESSIF/adu/port/: azure_iot_flash_platform.c  azure_iot_flash_platform_port.h
demos/projects/ESPRESSIF/aduotaupdate/: README.md
demos/projects/ESPRESSIF/aduotaupdate/config/: core_http_config.h  demo_config.h
demos/projects/ESPRESSIF/aduotaupdate/main/: CMakeLists.txt  azure_iot_freertos_esp32_main.c  azure_iot_freertos_esp32_pnp_model.c  azure_iot_freertos_esp32_pnp_model.h
demos/projects/ESPRESSIF/aduotaupdate/port/: azure_iot_crypto.c  azure_iot_flash_platform.c  azure_iot_flash_platform_port.h
demos/projects/ESPRESSIF/az-ca-recovery/: Makefile  README.md  README_ATECC608_Support.md  sdkconfig.defaults
demos/projects/ESPRESSIF/az-ca-recovery/config/: azure_iot_config.h  core_mqtt_config.h  demo_config.h
demos/projects/ESPRESSIF/az-ca-recovery/main/: CMakeLists.txt
demos/projects/ESPRESSIF/az-nvs-cert-bundle/: CMakeLists.txt  Makefile  README.md
demos/projects/ESPRESSIF/az-nvs-cert-bundle/main/: CMakeLists.txt  az_nvs_cert_bundle_main.c
demos/projects/ESPRESSIF/aziotkit/: GSG.md  Makefile  README.md  sdkconfig.ci  sdkconfig.defaults
demos/projects/ESPRESSIF/aziotkit/config/: azure_iot_config.h  core_mqtt_config.h  demo_config.h
demos/projects/ESPRESSIF/aziotkit/main/: CMakeLists.txt  azure_iot_freertos_esp32_main.c  azure_iot_freertos_esp32_sensors.c  azure_iot_freertos_esp32_sensors.h  azure_iot_freertos_esp32_sensors_data.c  azure_iot_freertos_esp32_sensors_data.h
demos/projects/ESPRESSIF/ca-recovery/: README.md
demos/projects/ESPRESSIF/ca-recovery/main/: CMakeLists.txt
demos/projects/ESPRESSIF/common/: azure_trust_bundle_storage_esp.c
demos/projects/ESPRESSIF/common/transport/: CMakeLists.txt  crypto_esp32.c  transport_socket_esp32.c
demos/projects/ESPRESSIF/esp32/: CMakeLists.txt  README.md  README_ATECC608_Support.md  sdkconfig.ci  sdkconfig.defaults
demos/projects/ESPRESSIF/esp32/adu/: Makefile
demos/projects/ESPRESSIF/esp32/config/: FreeRTOSConfig.h  _lwipopts.h  azure_iot_config.h  core_mqtt_config.h  demo_config.h  logging_stack.h
demos/projects/ESPRESSIF/nvs-rw-ca-cert/: CMakeLists.txt  Makefile  README.md  nvs_rw_blob_example_test.py
demos/projects/NXP/mimxrt1060/: ADU.md  CMakeLists.txt  LoadADUApplication.md  MCUXpressoDebug.md  MIMXRT1062xxxxx_flexspi_nor.ld  MIMXRT1062xxxxx_sdram.ld  README.md  VSCodeDebug.md  gcc_flags.cmake  main.c
demos/projects/PC/linux/: ADU.md  CMakeLists.txt  README.md  gcc_flags.cmake  main.c  main.h
demos/projects/PC/windows/: CMakeLists.txt  README.md  main.c  msvc_flags.cmake
demos/projects/ST/b-l475e-iot01a/: ADU.md  CMakeLists.txt  GSG.md  README.md  STM32L475VGTx_FLASH.ld  VSCodeDebug.md  errors.h  gcc_flags.cmake  gui_comm_api.c  gui_comm_api.h  gui_comm_api_ll.h  main.c  main.h  sample_gsg_device.c  system_data.c  system_data.h  uart_api.c  uart_api.h  uart_data_struct.h
demos/projects/ST/b-l4s5i-iot01a/: CMakeLists.txt  README.md  STM32L4S5AIIX_FLASH.ld
demos/sample_azure_iot/: sample_azure_iot.c  sample_azure_iot_if.h
demos/sample_azure_iot_adu/: sample_azure_iot_adu.c  sample_azure_iot_pnp_data_if.h  sample_azure_iot_pnp_simulated_data.c
demos/sample_azure_iot_adu_ca_recovery/: sample_azure_iot_adu_ca_recovery.c
demos/sample_azure_iot_ca_recovery/: ca-recovery-arm.bicep  ca-recovery-template.bicep  recovery-payload.json  sample_azure_iot_ca_recovery.c  sample_rsa_verify.c  sample_rsa_verify.h
demos/sample_azure_iot_ca_recovery/az-function/: recovery.csx
demos/sample_azure_iot_gsg/: sample_azure_iot_gsg.c  sample_gsg_device.h
demos/sample_azure_iot_pkcs11/: sample_azure_iot_pkcs11.c
demos/sample_azure_iot_pnp/: sample_azure_iot_pnp.c  sample_azure_iot_pnp.h  sample_azure_iot_pnp_core.c  sample_azure_iot_pnp_data_if.h  sample_azure_iot_pnp_device.c  sample_azure_iot_pnp_simulated_data.c  sample_azure_iot_pnp_simulated_device.c
(+275 files in other folders)
